--- a/Image_Carousel/index.html
+++ b/Image_Carousel/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js" defer></script>
+    <script src="/script.js" defer></script>
     <title>Image Carousel</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
                 <i class="carousel-button prev uil uil-arrow-circle-left" onclick="prevImage()"></i>
                 <a class="playButton" onclick="playButton()"><i class="uil uil-play"></i></a>
                 <a class="stopButton" onclick="stopButton()"><i class="uil uil-pause"></i></a>
-                <img class="blob main-img" name="slide" src="./images/image1.jpg">
+                <img class="blob main-img" name="slide" src="/images/image1.jpg">
                 <i class="carousel-button next uil uil-arrow-circle-right" onclick="nextImage()"></i>
                 
             </div>
